design fragment_register.xml

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,5 @@
     <color name="crayola">#FEAA2E</color>
     <color name="philippine_silver">#B3B3B3</color>
     <color name="philippine_silver_alpha">#94B3B3B3</color>
-    <color name="gunmental">#2C2E43</color>
+    <color name="gunmetal">#2C2E43</color>
 </resources>
