--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -25,4 +25,11 @@
         <item name="android:textColor">@color/white</item>
         <item name="fontFamily">sans-serif-light</item>
     </style>
+    <!-- TextInputLayout -->
+    <style name="CustomFilledBox" parent="Widget.Material3.TextInputLayout.FilledBox">
+        <item name="hintTextColor">@color/crayola</item>
+        <item name="boxStrokeColor">@color/crayola</item>
+        <item name="boxBackgroundColor">@color/gunmetal</item>
+        <item name="startIconTint">@color/philippine_silver</item>
+    </style>
 </resources>
