--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -65,6 +65,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <!-- Password -->
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/container_password"
         style="@style/CustomFilledBox"
@@ -78,6 +79,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/container_email"
         app:passwordToggleEnabled="true"
+        app:endIconMode="password_toggle"
         app:passwordToggleTint="@color/philippine_silver"
         app:startIconDrawable="@drawable/ic_round_lock">
 
@@ -85,6 +87,7 @@
             android:id="@+id/edt_password"
             style="@style/TextViewLightStyle"
             android:layout_width="match_parent"
+            android:maxLines="1"
             android:layout_height="wrap_content"
             android:textSize="@dimen/_14font_mdp" />
 
