--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,53 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.home.HomeFragment">
     <!-- Nested Scroll-->
     <androidx.core.widget.NestedScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        >
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-        <!-- Top movies container -->
-      <androidx.constraintlayout.widget.ConstraintLayout
-          android:id="@+id/container_top_movies"
-          app:layout_constraintTop_toTopOf="parent"
-          app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintEnd_toEndOf="parent"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content">
-          <!-- Top movies -->
-          <androidx.recyclerview.widget.RecyclerView
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:id="@+id/rv_top_movies"
-              app:layout_constraintTop_toTopOf="parent"
-              app:layout_constraintStart_toStartOf="parent"
-              app:layout_constraintEnd_toEndOf="parent"
-              />
-          <!-- Indicator use CircleIndicator2 for Recyclerview -->
-          <me.relex.circleindicator.CircleIndicator2
-              android:id="@+id/indicator_top_movies"
-              android:layout_width="0dp"
-              android:layout_height="@dimen/_10mdp"
-              app:layout_constraintTop_toBottomOf="@id/rv_top_movies"
-              app:layout_constraintStart_toStartOf="parent"
-              app:layout_constraintEnd_toEndOf="parent"
-              android:layout_marginTop="@dimen/_10mdp"/>
-      </androidx.constraintlayout.widget.ConstraintLayout>
+            <!-- Top movies container -->
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/container_top_movies"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+                <!-- Top movies -->
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_top_movies"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:listitem="@layout/item_home_top_movie" />
+                <!-- Indicator use CircleIndicator2 for Recyclerview -->
+                <me.relex.circleindicator.CircleIndicator2
+                    android:id="@+id/indicator_top_movies"
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/_10mdp"
+                    android:layout_marginTop="@dimen/_10mdp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/rv_top_movies" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
