--- a/app/src/main/res/menu/menu_botton_navigation.xml
+++ b/app/src/main/res/menu/menu_botton_navigation.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-<item android:id="@+id/fragment_home"
+<item android:id="@+id/homeFragment"
       android:title="@string/home"
     android:icon="@drawable/ic_round_home"/>
     <item android:id="@+id/searchFragment"
